# vfs.bluray

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/libbluray/: CMakeLists.txt  libbluray.txt
vfs.bluray/: addon.xml.in
